Fix padding of select menu's on Ubuntu 18
Padding of the left-hand side select boxes causes boxes to overlap. Confirmed on firefox 68.0 and Google Chrome 73 on Ubuntu 18 Gnome

--- a/snakeviz/static/snakeviz.css
+++ b/snakeviz/static/snakeviz.css
@@ -65,7 +65,6 @@ select {
   font-family: monospace;
   font-size: 20px;
   background: white;
-  padding: 10px 20px 10px 20px;
 }
 
 #sv-style-label {
